tests/ui/rust-2021/ice-unsized-fn-params-2.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/ice-unsized-fn-params-2.rs:7:14
   |
LL | fn guard(_s: Copy) -> bool {
   |              ^^^^
   |
   = note: `Copy` is dyn-incompatible, otherwise a trait object could be used
help: use a new generic type parameter, constrained by `Copy`
   |
LL - fn guard(_s: Copy) -> bool {
LL + fn guard<T: Copy>(_s: T) -> bool {
   |
help: you can also use an opaque type, but users won't be able to specify the type parameter when calling the `fn`, having to rely exclusively on type inference
   |
LL | fn guard(_s: impl Copy) -> bool {
   |              ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
